--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,34 @@
-*.i
-*.ii
-*.gpu
-*.ptx
-*.cubin
-*.fatbin
+# === Node / React ===
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# === Build output ===
+build/
+dist/
+out/
+
+# === Env files ===
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# === OS ===
+.DS_Store
+Thumbs.db
+
+# === Editor / IDE ===
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# === Testing / coverage ===
+coverage/
+
+# === Misc ===
+*.log
