--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,8 @@ coverage/
 
 # === Misc ===
 *.log
-.DS_Store.DS_Store
-.DS_Store
-dist/
-.DS_Store
+
+# === Adobe Illustrator files ===
+graphics/
+
+
