--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # === Node / React ===
 node_modules/
+test_uis/odontogram_editor_v4/node_modules
+backend/node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -9,7 +11,6 @@ pnpm-debug.log*
 build/
 dist/
 out/
-test_uis/odontogram_editor_v4/node_modules
 
 # === Env files ===
 .env
