Integrating i18n for the whole app, and integrating the Odontogram submodule

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@odontogram-shell": ["src/modules/odontogram/vendor/odontogram-shell"]
     }
   },
   "include": ["src"]
