--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,6 +3,10 @@
     "target": "ES2022",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
+    "baseUrl": ".",
+    "paths": {
+      "@prisma/client": ["./node_modules/.prisma/client"]
+    },
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
