--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # === Node / React ===
 node_modules/
-test_uis/odontogram_editor_v4/node_modules
+src/modules/odontogram/engine/node_modules
 backend/node_modules
 npm-debug.log*
 yarn-debug.log*
@@ -38,5 +38,8 @@ coverage/
 
 # === Adobe Illustrator files ===
 graphics/
+
+# === Archive files ===
+archive/
 
 
