Add admin auth RBAC and quote workflow updates

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,16 @@
 DATABASE_URL="postgresql://fogorvosa_dental_app:EROS_JELSZO@localhost:5432/fogorvosa_dental_quote_creator"
 PORT=4000
+ADMIN_EMAIL="admin@dentalquote.local"
+ADMIN_PASSWORD="Admin123!"
+ADMIN_FULL_NAME="System Admin"
+AUTH_SESSION_TTL_DAYS=14
+
+# Szamlazz.hu
+SZAMLAZZ_AGENT_KEY=""
+INVOICE_MODE="preview"
+
+# NEAK
+NEAK_OJOTE_KEY=""
+NEAK_OJOTE_ENV="production"
+NEAK_WSS_USER=""
+NEAK_WSS_PASS=""
