--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,9 @@
     "dotenv": "^16.4.5",
     "fastify": "^5.7.4"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/node": "^22.7.5",
     "prisma": "^5.19.1",
